--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -38,10 +38,15 @@
 .menu-trigger {
 	position: relative;
 	.is--ipad & {
-	position: absolute;
-	left: 0px;
-	display: block;
-	width: 65px;
+		position: absolute;
+		right: 0px;
+		display: block;
+		width: 65px;
+		@include media(1330px) {
+			right: auto;
+			left: 0px;
+		}
+
 	}
 	// width: 120px;
 	padding: 15px 20px 15px 20px;
