--- a/style.css
+++ b/style.css
@@ -6294,13 +6294,16 @@ body.inside.tmpl_type_page_landing section.site-crumbs {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .page-23 #INV-ICONS p img {
+  width: auto;
   height: auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  margin-left: 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -6475,6 +6478,20 @@ body.inside.tmpl_type_page_landing section.site-crumbs {
   .page-23 #FAQ h2 {
     width: calc( 100% + 80px);
     margin-left: -40px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .page-326 .teen-videos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .page-326 .teen-videos > div {
+    width: 32%;
   }
 }
 
