header gap on venners

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1122,3 +1122,12 @@ body.inside.tmpl_type_page_landing {
 		} 
 	}
 }
+
+
+
+.page-21 .page-feature {
+	margin-bottom: 0 !important;
+	.feature-content {
+		padding-bottom: 0;
+	}
+}
